--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^7.34.2",
+    "@babylonjs/gui": "^7.34.2",
     "@babylonjs/loaders": "^7.34.2",
     "@babylonjs/materials": "^7.34.2",
     "file-loader": "^6.2.0"
