--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@babylonjs/core": "^7.34.2",
     "@babylonjs/gui": "^7.34.2",
+    "@babylonjs/inspector": "^7.34.3",
     "@babylonjs/loaders": "^7.34.2",
     "@babylonjs/materials": "^7.34.2",
     "file-loader": "^6.2.0"
